add readarr to treafik and dashy

--- a/templates/traefik-dynamic.yml.j2
+++ b/templates/traefik-dynamic.yml.j2
@@ -178,6 +178,11 @@ http:
         servers:
           - url: "http://192.168.1.107:7878/"
 
+    readarr:
+      loadBalancer:
+        servers:
+          - url: "http://192.168.1.107:8787/"
+
     sonarr:
       loadBalancer:
         servers:
