--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -129,6 +129,12 @@ sections:
         statusCheck: true
         statusCheckUrl: http://192.168.1.107:7878
 
+      - title: Readarr
+        url: https://readarr.{{ portainer_root_domain }}/
+        icon: hl-readarr
+        statusCheck: true
+        statusCheckUrl: http://192.168.1.107:8787
+
       - title: Prowlarr
         url: https://prowlarr.{{ portainer_root_domain }}/
         icon: hl-prowlarr
