added google drive to dashy

--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -280,6 +280,10 @@ sections:
       - title: TU/e Databases
         icon: hl-bookstack
         url: http://library.tue.nl/AZDatabases/
+      
+      - title: Google Drive
+        icon: hl-google-drive
+        url: https://drive.google.com/
 
   - name: Development
     icon: fas fa-code
