--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -280,7 +280,11 @@ sections:
       - title: TU/e Databases
         icon: hl-bookstack
         url: http://library.tue.nl/AZDatabases/
-      
+
+      - title: Trello
+        icon: hl-atlassian-trello
+        url: https://trello.com/u/tychobrouwer/boards
+
       - title: Google Drive
         icon: hl-google-drive
         url: https://drive.google.com/
