--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -166,9 +166,9 @@ sections:
         statusCheckUrl: https://192.168.1.108:8007
         statusCheckAllowInsecure: true
 
-      - title: FritzBox
+      - title: Zyxel Router
         url: http://192.168.1.1/
-        icon: hl-avmfritzbox
+        icon: hl-router
 
   - name: Personal
     icon: fas fa-tv
