fix readarr treafik config

--- a/templates/traefik-dynamic.yml.j2
+++ b/templates/traefik-dynamic.yml.j2
@@ -105,6 +105,15 @@ http:
       service: sonarr
       tls: {}
 
+    readarr:
+      entryPoints:
+        - web-secure
+      rule: "Host(`readarr.{{ portainer_root_domain }}`)"
+      middlewares:
+        - authelia
+      service: readarr
+      tls: {}
+
     pve-backup:
       entryPoints:
         - web-secure
