working Wiki.js

--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -297,6 +297,12 @@ sections:
         statusCheck: true
         statusCheckUrl: http://192.168.1.109:3000
 
+      - title: Wiki.js
+        url: https://wiki.tbrouwer.com/
+        icon: hl-wikijs
+        statusCheck: true
+        statusCheckUrl: http://192.168.1.110:3000
+
       - title: Cloudflare
         url: https://dash.cloudflare.com/
         icon: hl-cloudflare
