update dashy + authelia config

--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -123,6 +123,12 @@ sections:
         statusCheck: true
         statusCheckUrl: http://192.168.1.106:7878
 
+      - title: Bazarr
+        url: https://bazarr.{{ portainer_root_domain }}/
+        icon: hl-bazarr
+        statusCheck: true
+        statusCheckUrl: http://192.168.1.106:6767
+
       - title: Readarr
         url: https://readarr.{{ portainer_root_domain }}/
         icon: hl-readarr
