--- a/templates/server.properties.j2
+++ b/templates/server.properties.j2
@@ -46,7 +46,7 @@ require-resource-pack=false
 resource-pack=
 resource-pack-prompt=
 resource-pack-sha1=
-server-ip={{ ansible_default_ipv4.address | default(ansible_all_ipv4_addresses[0]) }}
+server-ip=
 server-port=25565
 simulation-distance=10
 spawn-animals=true
