fix traefik pihole-2 + add dropbox dashy

--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -295,6 +295,10 @@ sections:
         icon: hl-google-drive
         url: https://drive.google.com/
 
+      - title: Dropbox
+        icon: https://cfl.dropboxstatic.com/static/metaserver/static/images/favicon.ico
+        url: https://www.dropbox.com/home
+
   - name: Development
     icon: fas fa-code
     displayData:
