update dashy to at panache shit

--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -245,7 +245,7 @@ sections:
 
       - title: Office 365
         icon: hl-office-365
-        url: https://www.office.com/
+        url: https://www.office.com/?auth=2
 
       - title: Osiris
         icon: https://www.caci.nl/wp-content/uploads/2021/03/Osiris_Pyramid_v5.png
@@ -255,10 +255,6 @@ sections:
         icon: https://www.caci.nl/wp-content/uploads/2021/03/Osiris_Pyramid_v5.png
         url: https://tue.osiris-planapp.nl/#/
 
-      - title: Video College
-        url: https://videocollege.tue.nl/Mediasite/Showcase/5faaf306ddb04160a674b9709f79809f44
-        icon: https://mediasite.com/wp-content/themes/base-child/assets/images/Mediasite-Logo-Mark_Color@2x.png
-
       - title: DeepL
         url: https://www.deepl.com/translator
         icon: https://static.deepl.com/img/logo/DeepL_Logo_darkBlue_v2.svg
@@ -267,29 +263,9 @@ sections:
         url: https://www.overleaf.com/project
         icon: favicon
 
-      - title: TUe Gitlab
-        url: https://gitlab.tue.nl/dashboard/projects
-        icon: hl-gitlab
-
-      - title: ANS Delft
-        icon: favicon
-        url: https://ans.app/
-
-      - title: SOWISO
-        icon: https://sowiso.nl/favicon.png
-        url: https://tue.sowiso.nl/
-
-      - title: Intranet
-        icon: https://www.tue.nl/favicon-64.ico
-        url: https://tuenl.sharepoint.com/
-
       - title: TU/e Databases
         icon: hl-bookstack
         url: http://library.tue.nl/AZDatabases/
-
-      - title: Trello
-        icon: hl-atlassian-trello
-        url: https://trello.com/u/tychobrouwer/boards
 
       - title: Google Drive
         icon: hl-google-drive
@@ -298,6 +274,26 @@ sections:
       - title: Dropbox
         icon: https://cfl.dropboxstatic.com/static/metaserver/static/images/favicon.ico
         url: https://www.dropbox.com/home
+
+      - title: Todoist
+        icon: hl-todoist
+        url: https://app.todoist.com/app/inbox
+
+      - title: Google Contacts
+        icon: hl-google-contacts
+        url: https://contacts.google.com/
+
+      - title: Forms Responses
+        icon: hl-google-forms
+        url: https://docs.google.com/spreadsheets/d/1GD3rJndGRMM8qIvlFPtQ1gCT1n-p7KTxS9YRP-vl-vs/edit
+
+      - title: Member Admin
+        icon: hl-google-forms
+        url: https://www.dropbox.com/scl/fi/411plz5boru5qd5ry5ebv/Member-Administration-2024-2025.xlsx
+
+      - title: SSC DMS
+        icon: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRHRyQ6l5Qyo3NH8A8zPuWgW06SK4IO3MLwPA&s
+        url: https://dms.studentensportcentrumeindhoven.nl/members/profile/myprofile
 
   - name: Development
     icon: fas fa-code
