update dashy to at panache shit

--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -267,6 +267,10 @@ sections:
         icon: hl-bookstack
         url: http://library.tue.nl/AZDatabases/
 
+      - title: ESBV Panache
+        icon: https://esbvpanache.nl/wp-content/uploads/2015/05/254596_10151060894411945_2113449619_n.jpg
+        url: https://esbvpanache.nl/
+
       - title: Google Drive
         icon: hl-google-drive
         url: https://drive.google.com/
