update tandoor treafik and dashy

--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -209,6 +209,12 @@ sections:
         icon: hl-spotify
         url: https://open.spotify.com/
 
+      - title: Tandoor
+        icon: hl-tandoor
+        url: https://tandoor.{{ portainer_root_domain }}/
+        statusCheck: true
+        statusCheckUrl: http://192.168.1.106:9080/
+
       - title: iCloud
         icon: favicon
         url: https://www.icloud.com/
@@ -270,6 +276,10 @@ sections:
       - title: ESBV Panache
         icon: https://esbvpanache.nl/wp-content/uploads/2015/05/254596_10151060894411945_2113449619_n.jpg
         url: https://esbvpanache.nl/
+
+      - title: Google Mail
+        icon: hl-gmail
+        url: https://mail.google.com/mail/
 
       - title: Google Drive
         icon: hl-google-drive
