--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -209,6 +209,12 @@ sections:
         icon: hl-spotify
         url: https://open.spotify.com/
 
+      - title: Home Assistant
+        icon: hl-home-assistant
+        url: https://ha.tbrouwer.com/
+        statusCheck: true
+        statusCheckUrl: http://192.168.1.203:8123/
+
       - title: Tandoor
         icon: hl-tandoor
         url: https://tandoor.{{ portainer_root_domain }}/
