--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -148,6 +148,12 @@ sections:
         statusCheck: true
         statusCheckUrl: http://192.168.1.106:9696
 
+      - title: Flaresolverr
+        url: https://flaresolverr.{{ portainer_root_domain }}/
+        icon: hl-flaresolverr
+        statusCheck: true
+        statusCheckUrl: http://192.168.1.106:8191
+
       - title: qBittorrent
         url: https://torrent.{{ portainer_root_domain }}/
         icon: hl-qbittorrent
