--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -148,7 +148,7 @@ sections:
         statusCheck: true
         statusCheckUrl: http://192.168.1.106:9696
 
-      - title: Flaresolverr
+      - title: FlareSolverr
         url: https://flaresolverr.{{ portainer_root_domain }}/
         icon: hl-flaresolverr
         statusCheck: true
