--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -149,7 +149,7 @@ sections:
         statusCheckUrl: http://192.168.1.106:9696
 
       - title: FlareSolverr
-        url: https://flaresolverr.{{ portainer_root_domain }}/
+        url: http://192.168.1.106:8191
         icon: hl-flaresolverr
         statusCheck: true
         statusCheckUrl: http://192.168.1.106:8191
