fix stirling statuscheck

--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -285,7 +285,7 @@ sections:
         icon: hl-stirling-pdf
         url: https://stirling.{{ portainer_root_domain }}/
         statusCheck: true
-        statusCheckUrl: http://10.12.12.113:8080/
+        statusCheckUrl: http://10.12.12.113:8080
 
       - title: ESBV Panache
         icon: https://esbvpanache.nl/wp-content/uploads/2015/05/254596_10151060894411945_2113449619_n.jpg
