add matlab to dashy + traefik

--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -269,23 +269,29 @@ sections:
         icon: https://www.caci.nl/wp-content/uploads/2021/03/Osiris_Pyramid_v5.png
         url: https://tue.osiris-planapp.nl/#/
 
-      - title: DeepL
-        url: https://www.deepl.com/translator
-        icon: https://static.deepl.com/img/logo/DeepL_Logo_darkBlue_v2.svg
-
       - title: Overleaf
         url: https://www.overleaf.com/project
         icon: favicon
-
-      - title: TU/e Databases
-        icon: hl-bookstack
-        url: https://library.tue.nl/AZDatabases/
 
       - title: Stirling PDF
         icon: hl-stirling-pdf
         url: https://stirling.{{ portainer_root_domain }}/
         statusCheck: true
         statusCheckUrl: http://10.12.12.113:8080
+
+      - title: MATLAB
+        icon: https://nl.mathworks.com/etc.clientlibs/mathworks/clientlibs/customer-ui/templates/common/resources/images/mathworks-logo-membrane.20250206052022769.svg
+        url: https://matlab.tbrouwer.com
+        statusCheck: true
+        statusCheckUrl: http://10.12.12.114:8888
+      
+      - title: DeepL
+        url: https://www.deepl.com/translator
+        icon: https://static.deepl.com/img/logo/DeepL_Logo_darkBlue_v2.svg
+
+      - title: TU/e Databases
+        icon: hl-bookstack
+        url: https://library.tue.nl/AZDatabases/
 
       - title: ESBV Panache
         icon: https://esbvpanache.nl/wp-content/uploads/2015/05/254596_10151060894411945_2113449619_n.jpg
