add traefik container instead of docker

--- a/templates/dashy-conf.yml.j2
+++ b/templates/dashy-conf.yml.j2
@@ -156,10 +156,10 @@ sections:
         statusCheckUrl: http://10.12.12.104:8080
 
       - title: Traefik
-        url: http://portainer.home:8080/
+        url: http://10.12.12.115:8080/
         icon: hl-traefik
         statusCheck: true
-        statusCheckUrl: http://10.12.12.201:8080
+        statusCheckUrl: http://10.12.12.115:8080
 
       - title: InfluxDB
         url: http://portainer.home:8086/
