--- a/templates/prometheus.yml.j2
+++ b/templates/prometheus.yml.j2
@@ -1,3 +1,7 @@
+global:
+  scrape_interval: 15s
+  evaluation_interval: 15s
+
 scrape_configs:
   - job_name: 'pve'
     static_configs:
@@ -15,3 +19,10 @@ scrape_configs:
         target_label: instance
       - target_label: __address__
         replacement: 127.0.0.1:{{ prometheus_pve_exporter_port }}
+
+  - job_name: 'node'
+    static_configs:
+      - targets:
+{% for host in groups['proxmox_lxc_running'] %}
+        - "{{ hostvars[host]['ansible_host'] }}:9100"
+{% endfor %}
