--- a/templates/prometheus.yml.j2
+++ b/templates/prometheus.yml.j2
@@ -26,6 +26,8 @@ scrape_configs:
 {% for host in groups['proxmox_lxc_running'] %}
         - "{{ hostvars[host]['ansible_host'] }}:9100"
 {% endfor %}
+        - "{{ hostvars['pve']['ansible_host'] }}:9100"
+        - "{{ hostvars['docker']['ansible_host'] }}:9100"
 
   - job_name: 'traefik'
     static_configs:
